# OpenHoW

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  README.md  setup_cmake.bat  setup_libraries.bat
.github/: FUNDING.yml
doc/: Maps.md  README.md  Scenario.md  Speech.md  coding_style.md
editor/: CMakeLists.txt  ConsolePanel.cpp  ConsolePanel.h  DrawCanvas.cpp  DrawCanvas.h  HexChoiceBox.cpp  HexChoiceBox.h  ObjectPropertiesDialog.cpp  ObjectPropertiesDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  ViewportPanel.cpp  ViewportPanel.h  main.h  (+1 more)
libpork/: CMakeLists.txt  actor.c  actor.h  config.c  engine.c  engine.h  engine_gl.h  extractor.c  font.c  font.h  how_model.c  input.c  map.c  model.c  model.h  player.c  player.h  pog.c  pork.h  pork_actor.c  pork_actor.h  pork_audio.c  pork_audio.h  pork_classes.h  pork_config.c  pork_console.c  pork_console.h  pork_editor.c  pork_engine.c  pork_engine.h  pork_extractor.c  pork_font.c  pork_font.h  pork_formats.c  pork_formats.h  pork_game.c  pork_game.h  pork_imgui.cpp  pork_imgui.h  pork_input.c  (+17 more)
libpork/client/: client.c  client.h  client_actor.c  client_actor.h  client_display.c  client_display.h  client_font.c  client_font.h  client_frontend.c  client_frontend.h  client_particle.c  client_shader.c  client_shader.cpp  client_shader.h  client_video.c  client_video.h  shader_base.h
libpork/game/: actor.cpp  actor.h
libpork/include/pork/: model.h  pog.h  pork.h
libpork/script/: script.c  script.h
libpork/server/: server.c  server.h  server_actor.c  server_actor.h
libpork/server/game/: actor_pig.h
src/engine/: App.cpp  App.h  CMakeLists.txt  Console.cpp  Console.h  InputManager.cpp  InputManager.h  Language.cpp  Language.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MathUtilities.h  Menu.cpp  Menu.h  ModManager.cpp  ModManager.h  ModSupport.cpp  ModSupport.h  ModelResource.cpp  ModelResource.h  Property.cpp  Property.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Terrain.cpp  Terrain.h  TextureResource.cpp  TextureResource.h  TextureViewer.h  Timer.h  Utilities.cpp  Utilities.h  audio.c  audio.cpp  audio.h  client.cpp  (+52 more)
src/engine/audio/: AudioManager.cpp  AudioManager.h  audio.cpp  audio.h  stb_vorbis.c
src/engine/client/: audio.cpp  audio.h  client.c  client.cpp  client.h  demo.c  display.c  display.h  font.c  font.h  frontend.c  frontend.h  particle.c  shader.c  shader.h  video.c  video.h
src/engine/editor/: ActorTreeWindow.cpp  ActorTreeWindow.h  BaseWindow.cpp  BaseWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  MapConfigEditor.cpp  MapConfigEditor.h  ModelViewer.cpp  ModelViewer.h  NewGameWindow.cpp  NewGameWindow.h  NewMapWindow.cpp  NewMapWindow.h  ParticleEditor.cpp  ParticleEditor.h  TerrainImportWindow.cpp  TerrainImportWindow.h  TexturePicker.cpp  TexturePicker.h  TextureViewer.h  base_window.cpp  base_window.h  map_config_editor.cpp  map_config_editor.h  model_viewer.cpp  model_viewer.h  new_map_window.cpp  texture_viewer.h  window_actor_tree.cpp  window_actor_tree.h  window_map_config.cpp  window_map_config.h  window_model_viewer.cpp  window_model_viewer.h  window_new_game.cpp  window_new_game.h  window_new_map.cpp  window_new_map.h  window_particle_editor.cpp  (+4 more)
src/engine/game/: AAirship.cpp  AAirship.h  AAnimatedModel.cpp  AAnimatedModel.h  AHealthPickup.cpp  AItemPickup.cpp  AModel.cpp  AModel.h  AParachuteWeapon.cpp  AParachuteWeapon.h  AParticle.cpp  APig.cpp  APig.h  ASprite.cpp  AStaticModel.cpp  AStaticModel.h  ATrotterWeapon.cpp  ATrotterWeapon.h  AVehicle.cpp  AVehicle.h  AWeapon.cpp  AWeapon.h  Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  AnimatedModelActor.cpp  AnimatedModelActor.h  BaseGameMode.cpp  BaseGameMode.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameMode.cpp  GameMode.h  GameModeInterface.h  Inventory.cpp  Inventory.h  ModelActor.cpp  (+48 more)
src/engine/game/actors/: AnimatedModelActor.cpp  AnimatedModelActor.h  ModelActor.cpp  ModelActor.h  PigActor.cpp  StaticModelActor.cpp  StaticModelActor.h  actor.cpp  actor.h  actor_airship.cpp  actor_airship.h  actor_animated_model.cpp  actor_animated_model.h  actor_item.cpp  actor_item.h  actor_item_ammo.cpp  actor_item_health.cpp  actor_model.cpp  actor_model.h  actor_particle.cpp  actor_pig.cpp  actor_pig.h  actor_sprite.cpp  actor_static_model.cpp  actor_static_model.h  actor_vehicle.cpp  actor_vehicle.h  actor_weapon.cpp  actor_weapon.h  inventory.cpp  inventory.h  item_parachute.cpp  item_parachute.h  pickup_health.cpp  pickup_item.cpp  weapon_parachute.cpp  weapon_parachute.h  weapon_trotter.cpp  weapon_trotter.h
src/engine/graphics/: BitmapFont.cpp  BitmapFont.h  Camera.cpp  Camera.h  Display.cpp  Display.h  ParticleEffect.cpp  ParticleEffect.h  ParticleEmitter.cpp  ParticleEmitter.h  PostProcess.h  ShaderManager.cpp  ShaderManager.h  Sprite.cpp  Sprite.h  TextureAtlas.cpp  TextureAtlas.h  camera.cpp  camera.h  display.c  display.cpp  display.h  font.c  font.cpp  font.h  mesh.cpp  mesh.h  particle_effect.cpp  particle_emitter.cpp  particle_emitter.h  particles.cpp  particles.h  post_process.h  shader.c  shader.h  shaders.cpp  shaders.h  sprite.cpp  sprite.h  texture_atlas.cpp  (+4 more)
src/engine/loaders/: FacLoader.cpp  FacLoader.h  HirLoader.cpp  Loaders.h  MinLoader.cpp  No2Loader.cpp  VtxLoader.cpp  VtxLoader.h  WaveFrontReader.h  fac.c  fac.h  hir.c  hir.cpp  loaders.h  mad.c  min.c  no2.c  obj.cpp  vtx.c  vtx.h
src/engine/physics/: PhysicsInterface.cpp  PhysicsInterface.h  physics_interface.cpp  physics_interface.h
src/engine/physics/newton/: newton_interface.cpp
src/engine/script/: JsonReader.cpp  JsonReader.h  ScriptConfig.cpp  ScriptConfig.h  json_reader.cpp  json_reader.h  script.c  script.cpp  script.h  script_config.cpp  script_config.h
src/engine/server/: actor.cpp  actor.h  pig.cpp  pig.h  server.cpp  server.h
src/tools/: CMakeLists.txt
src/tools/extractor/: CMakeLists.txt  extractor.c  extractor.h  pc_copy_paths.h  pc_music_paths.h  pc_package_paths.h  version.c
src/tools/img2pmg/: CMakeLists.txt  main.c
src/tools/ptgtool/: CMakeLists.txt  ptgtool.c
(+214 files in other folders)
